INSTALL(FILES
    menu.html
    index.html
    license.html
    sqlite.html
    usage-run.html
    usage-file.html
    troubleshooting.html
    usage-prefs.html
    usage-context.html
    usage-database.html
    sqleditor.html
    usage-system.html
    results.html
# pngs
    main_window.png
    create_table.png
    sqleditor.png
    results.png
  DESTINATION ${DOC_DIR}/en/
)
